More styling for header and buttons

--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
     <div class="container">
         <div class="header">
             <div class="task-bar">
-                <h1>To-Do List</h1>
                 <div class="input-group">
                     <input type="text" id="task-input" placeholder="Add a new task">
-                    <button id="add-task-btn"><i class="fa-solid fa-circle-plus"></i></button>
+                    <i class="fa-solid fa-plus"></i>
                 </div>
-                <div class="header-icons">
-                    <div class="history-btn">
-                        <i class="fa-solid fa-history"></i>
-                        <span class="notification-btn"></span>
-                    </div>
-                    <div class="notification-bell">
-                        <i class="fa-solid fa-bell"></i>
-                        <span class="notification-btn"></span>
-                    </div>
-                </div>
+            </div>
+            <div class="header-icons">
+                <button class="history-btn">
+                    <i class="fa-solid fa-history"></i>
+                    <span class="notification-dot"></span>
+                </button>
+                <button class="notification-bell">
+                    <i class="fa-solid fa-bell"></i>
+                    <span class="notification-dot"></span>
+                </button>
             </div>
         </div>
     </div>
