Add stat card hover

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       <div class="main-content">
         <div class="title-section">
           <div class="greeting" id="greeting"></div>
-          <h1>You have <span id="task-count">0</span> tasks today</h1>
+          <h1>You have <span id="task-count">0</span> tasks today.</h1>
         </div>
       </div>
 
       <div class="sidebar">
         <div class="sidebar-section">
-          <div class="sidebar-title">Task Summary:</div>
+          <div class="sidebar-title">Tasks Summary:</div>
 
           <div class="stat-card">
             <div class="stat-label">Completion Rate:</div>
