Adding consistent border styling + restyling modal

--- a/index.html
+++ b/index.html
@@ -24,13 +24,18 @@
           <button class="user-btn" onClick="openUserModal()">
             <i class="fa-solid fa-user"></i>
           </button>
-          <div class="modal" id="userModal" aria-hidden="true">
+
+          <div class="modal" id="userModal">
             <div class="modal-content">
-              <button class="modal-actions login">Login</button>
-              <button class="modal-actions signup">Sign Up</button>
-              <button class="modal-actions close" id="closeUserModal" onClick="closeUserModal()">Cancel</button>
+              <div class="modal-actions">
+                <button class="btn btn-primary" onClick="userLogin()">Login</button>
+                <button class="btn btn-primary" onClick="userSignup()">Sign Up</button>
+                <button class="btn btn-primary" onClick="userLogout()">Logout</button>
+                <button class="btn btn-secondary" onClick="closeUserModal()">Close</button>
+              </div>
             </div>
           </div>
+
           <button
             class="theme-toggle-btn"
             id="theme-toggle"
