--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="main-content">
         <div class="title-section">
           <div class="greeting" id="greeting"></div>
-          <h1>You have <span id="task-count">0</span> tasks today.</h1>
+          <h1>You have <span id="task-count">0</span> <span id="task-word">tasks</span> today.</h1>
         </div>
 
         <div class="task-bar">
