Changing sidebar content

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
           <div class="sidebar-title">Tasks Summary:</div>
 
           <div class="stat-card">
+            <div class="stat-label">Total Tasks:</div>
+            <div class="stat-value" id="totalTasks">0</div>
+          </div>
+
+          <div class="stat-card">
             <div class="stat-label">Completion Rate:</div>
             <div class="stat-value" id="completionRateValue" style="width: 0%">
               0%
@@ -106,23 +111,12 @@
             <div class="progress-bar">
               <div
                 class="progress-fill"
-                id="completionProgess"
+                id="completionProgress"
                 style="width: 0%"
               ></div>
             </div>
           </div>
 
-          <div class="stat-card">
-            <div class="stat-label">Total Tasks:</div>
-            <div class="stat-value" id="totalTasks">0</div>
-            <div class="progress-bar">
-              <div
-                class="progress-fill"
-                id="totalProgress"
-                style="width: 0%"
-              ></div>
-            </div>
-          </div>
 
           <div class="stat-card">
             <div class="stat-label">Completed:</div>
