--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           <button
             class="theme-toggle-btn"
             id="theme-toggle"
-            aria-label="Toggle theme"
-            aria-pressed="false"
+            onclick="toggleTheme()"
           >
             <i id="theme-icon" class="fa-solid fa-moon"></i>
           </button>
