Show notification dot implementation

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="container">
       <div class="header">
         <div class="header-icons">
-          <button class="history-btn">
+          <button class="history-btn" id="history-btn">
             <i class="fa-solid fa-history"></i>
-            <span class="notification-dot"></span>
+            <span class="notification-dot" id="history-notification"></span>
           </button>
-          <button class="notification-bell">
+          <button class="notification-bell" id="notification-bell">
             <i class="fa-solid fa-bell"></i>
-            <span class="notification-dot"></span>
+            <span class="notification-dot" id="task-notification"></span>
           </button>
 
           <button
